--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-test",
+  "name": "next-typescript-recoil-reactquery",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "react-error-boundary": "^3.1.4",
+    "react-loader-spinner": "^5.3.4",
+    "react-query": "^3.39.2",
+    "recoil": "^0.7.6",
+    "typescript": "4.8.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "@types/uuid": "^8.3.4"
   }
 }
