--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_APP_TITLE="NextJS + TypeScript + Recoil + ReactQuery"
 NEXT_PUBLIC_API_SERVER_URL="http://127.0.0.1:8000"
-NEXT_PUBLIC_DEBUG=$DEBUG
+NEXT_PUBLIC_DEBUG=true
