--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,8 +53,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "@types/*.ts"
   ],
   "exclude": [
     "node_modules"
